<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:text="@string/addition_cost"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/ednCost"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ednCost"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_cost_addition"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="56dp"
        android:layout_weight="1"
        android:text="@string/should_add_taxes"
        app:layout_constraintEnd_toStartOf="@+id/tgbTaxes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ToggleButton
        android:id="@+id/tgbTaxes"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_weight="1"
        android:textColor="#455A64"
        android:textOff="@string/tgb_addTaxes_off"
        android:textOn="@string/tgb_addTaxes_on"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:layout_weight="1"
        android:text="@string/share_receiving"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/spnPerson"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:layout_weight="1"
        android:text="@string/how_much_tip"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/spnTip"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spnPerson"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_weight="1"
        android:entries="@array/sharing_person_array"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0"
        android:text="@string/submit_button"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spnTip"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_weight="1"
        android:entries="@array/taxes_array"
        android:minHeight="48dp"
        android:spinnerMode="dialog"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#9AA9FF"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>